<resources>
    <string name="app_name">Healthy Lifestyle</string>
    <string name="navigation_title_diary">Diary</string>
    <string name="navigation_title_challenges">Challenges</string>
    <string name="navigation_title_profile">Profile</string>
    <string name="food_list_tv_title_list_of_aliments">List of aliments</string>
    <string name="food_list_et_search_aliments">Search aliments</string>
    <string name="profile_fragment_title_about_you">About you</string>
    <string name="profile_fragment_tv_imc">IMC:</string>
    <string name="profile_fragment_number_of_calories">Number of calories:</string>
    <string name="profile_fragment_your_challenges">Your Challenges:</string>
    <string name="profile_fragment_tv_personal_information">Personal information:</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_bt_signin_text">SignIn</string>
    <string name="login_bt_register_text">Register now</string>
    <string name="diary_fragment_calories_title">Calories</string>
    <string name="diary_fragment_today_s_summary_title">Today\'s Summary</string>
    <string name="diary_fragment_tv_eaten_calories">Eaten</string>
    <string name="diary_fragment_tv_goal_calories">Goal</string>
    <string name="register_et_name">Name</string>
    <string name="register_et_age">Age</string>
    <string name="register_et_height">Height (cm)</string>
    <string name="register_et_weight">Weight (kg)</string>
    <string name="register_rb_male">Male</string>
    <string name="register_rb_female">Female</string>
    <string name="register_tv_goal">Choose your goal</string>
    <string name="register_tv_gender">Gender</string>
    <string name="register_et_email">Email</string>
    <string name="register_et_password">Password</string>
    <string name="register_bt_save">Save</string>
    <string name="nutrition_bt_add_breakfast">Add Breakfast</string>
    <string name="nutrition_bt_add_lunch">Add Lunch</string>
    <string name="nutrition_bt_add_dinner">Add Dinner</string>
    <string name="nutrition_bt_add_snacks">Add Snacks</string>
    <string name="nutrition_tv_aliments_list">List of aliments from today\'s meals</string>
    <string name="nutrition_tr_tv_breakfast">Breakfast</string>
    <string name="nutrition_tr_tv_lunch">Lunch</string>
    <string name="nutrition_tr_tv_snacks">Snacks</string>
    <string name="nutrition_tr_tv_dinner">Dinner</string>
    <string name="exercise_tv_video_workouts_title">Try some workouts! Here are some of the most efficient</string>
    <string name="exercise_tv_challenges_title">Do you need to motivate yourself? Try one of these challenges!</string>
    <string name="challenges_tv_no_chocolate">No chocolate</string>
    <string name="challenges_tv_no_fast_food">No fast food</string>
    <string name="challenges_tv_no_smoking">No smoking</string>
    <string name="challenges_tv_no_sodas">No sodas</string>
    <string name="challenges_tv_no_coffee">No coffee</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diary_fragment_tv_nutrition">Nutrition</string>
    <string name="food_list_btn_done">Done</string>
    <string name="hydration_tv_quantity">250 ml</string>
    <string name="diary_tv_add_your_activity">Add your activity</string>
    <string name="diary_tv_hydration">Hydration</string>
    <string name="zero_water_progress">0% / 100%</string>
    <string name="number_water_Progress">% / 100%</string>
    <string name="dyary_tv_zero_calories_default">0</string>
    <string name="title_aliments_list">Add your meal\'s aliments</string>
    <string name="title_register">Register</string>
    <string name="register_tv_account_information">Account information</string>
    <string name="register_confirm_password">Confirm password</string>
    <string name="register_invalid_name">Invalid name</string>
    <string name="register_invalid_age">Invalid age</string>
    <string name="register_invalid_height">Invalid height</string>
    <string name="register_invalid_weight">Invalid weight</string>
    <string name="register_no_gender">Please select a gender</string>
    <string name="register_invalid_email">Invalid email</string>
    <string name="register_invalid_password">Invvalid password</string>
    <string name="register_invalid_confirm_password">Passwords don\'t match</string>
    <string name="register_tv_personal_information">Personal information</string>
    <string name="aliments_list_tv_product">Product</string>
    <string name="aliments_list_tv_quantity">Quantity</string>
    <string name="aliments_list_tv_calories">Calories</string>
    <string name="diary_tv_remaining_cal">Remaining</string>
    <string name="nutrition_no_aliments_added_yet">No aliments added yet</string>
    <string name="register_passwd_8_characters">Password must have at least 8 characters</string>
    <string name="login_inexistent_email">This account does not exist! Please register!</string>
    <string name="login_incorrect_password">Incorrect password</string>
    <string name="profile_fragment_tv_name">Name:</string>
    <string name="profile_fragment_tv_email">Email:</string>
    <string name="profile_fragment_tv_height">Height:</string>
    <string name="profile_fragment_tv_weight">Weight:</string>
    <string name="profile_fragment_tv_activity_level">Activity level:</string>
    <string name="profile_fragment_update_success"> Information updated successfully</string>
    <string name="profile_fragment_update_fail"> Update failed</string>
    <string name="edit_personal_info_et_email">Email</string>
    <string name="edit_personal_info_et_name">Name</string>
    <string name="edit_personal_info_et_height">Height</string>
    <string name="edit_personal_info_et_weight">Weight</string>
    <string name="profile_fragment_btn_edit">Edit</string>
    <string name="profile_fragment_ad_btn_save_changes">Save changes</string>
    <string name="profile_fragment_btn_delete_account">Delete account</string>
    <string name="profile_fragment_ad_tv_delete_message">Are you sure that you want to delete your account?</string>
    <string name="profile_fragment_ad_title_edit_personal_info">Edit personal information</string>
    <string name="profile__fragment_ad_btn_yes">Yes</string>
    <string name="profile_fragment_ad_btn_no">No</string>
    <string name="profile_fragment_ad_title_confirm_delete_account">Confirm delete account</string>
    <string name="hydration_activity_tv_add_water">Add water</string>
    <string name="register_activity_tv_choose_your_activity_level">Choose your activity level</string>
    <string name="challenge_fragment_tv_choose_a_challenge">Choose a challenge!</string>
    <string name="challenge_fragment_tv_no_coffee">No coffee</string>
    <string name="challenge_fragment_tv_no_fast_food">No fast food</string>
    <string name="challenge_fragment_tv_no_smoking">No smoking</string>
    <string name="challenge_fragment_tv_no_soda">No soda</string>
    <string name="challenge_fragment_tv_no_sweets">No sweets</string>
    <string name="challenge_detail_title_no_coffee">No coffee challenge</string>
    <string name="challenge_detail_title_no_fast_food">No fast food challenge</string>
    <string name="challenge_detail_title_no_smoking">No smoking challenge</string>
    <string name="challenge_detail_title_no_soda">No soda challenge</string>
    <string name="challenge_detail_title_no_sweets">No sweets challenge</string>
    <string name="challenge_detail_btn_start_challenge">Start challenge</string>
    <string name="challenge_detail_tv_give_up">I give up</string>
    <string name="challenge_detail_no_coffee">noCoffee</string>
    <string name="challenge_detail_no_fast_food">noFastFood</string>
    <string name="challenge_detail_no_smoking">noSmoking</string>
    <string name="challenge_detail_no_soda">noSoda</string>
    <string name="challenge_detail_no_sweets">noSweets</string>
    <string name="profile_fragment_tv_your_achievements">Your achievements: </string>
    <string name="profile_fragment_btn_view_challenge_report">View challenges report</string>
    <string name="profile_fragment_btn_view_progress_report">View progress report</string>
    <string name="achievements_report_tv_personal_report">PERSONAL REPORT</string>
    <string name="achievements_report_tv_achievements">-Achievements-</string>
    <string name="achievements_report_tv_your_imc_is">, your IMC value is: </string>
    <string name="achievements_report_tv__calories_text">and the recommended number of calories you need to consume daily is</string>
    <string name="achievements_report_tv__calories_text_1">and the number of</string>
    <string name="achievements_report_tv_calories_text_2">calories you need to consume daily is: </string>
    <string name="achievements_report_tv_achievements_since_join">Since you have joined us, your achievements are:</string>
    <string name="achievements_tv_average_calories_text">*In terms of consumed calories, the average is of:</string>
    <string name="achievements_report_tv_average_cal_per_day">calories/day</string>
    <string name="achievements_report_tv_hydration_average_text">*In terms of hydration level, the average is of:</string>
    <string name="achievements_report_tv_hydration_percent">%/day</string>
    <string name="achievements_report_tv_graphic_title">Here is a graphic that represents your hydration level evolution:</string>
    <string name="challenge_report_tv_title">CHALLENGE REPORT</string>
    <string name="challenge_report_tv_paragraph_1">Since you have joined us, you have accepted some of our challenges. Your achievements are:</string>
    <string name="challenge_lv_row_tv_congratulations">Congratulations! You haven\'t</string>
    <string name="challenge_lv_row_no_coffee">drunk coffee for</string>
    <string name="challenge_tv_row_no_fastFood">eaten fast-food for</string>
    <string name="challenge_row_lv_no_smoking">smoked for</string>
    <string name="challenge_row_lv_no_soda">drunk soda for</string>
    <string name="challenge_row_lv_no_sweets">eaten sweets for</string>
    <string name="challenge_dapter_days"> days, </string>
    <string name="challenge_adapter_hours"> hours, </string>
    <string name="challenge_adapter_minutes"> minutes, </string>
    <string name="challenge_adapter_seconds"> seconds. </string>
    <string name="challenge_report_btn_download">Download report</string>
    <string name="achievements_report_btn_download">Download report</string>
    <string name="exercise_tv_it_s_workouts_time">It\'s workouts time!</string>
    <string name="exercise_btn_upload_a_challenge">Upload a challenge</string>
    <string name="exercise_tv_gym">Are you looking for an awesome gym? Here you can find some of the most popular:</string>
    <string name="exercise_btn_gyms_locations">gyms locations</string>
    <string-array name="register_goals_array">
        <item>Lose weight</item>
        <item>Maintain weight</item>
        <item>Build muscle</item>
    </string-array>
    <string-array name="register_activity_level_array">
        <item>Lightly active</item>
        <item>Not very active</item>
        <item>Active</item>
        <item>Very active</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="profile_fragment_tv_account">Account:</string>
    <string name="achievements_report_btn_chart">View chart</string>
    <string name="challenge_report_tv_empty_lv">There are no challenges yet</string>
</resources>