<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/register_tv_personal_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_tv_personal_information"
            android:textSize="17dp"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp">
        </TextView>

        <EditText
            android:id="@+id/register_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_et_name"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@id/register_tv_personal_info">
        </EditText>

        <EditText
            android:id="@+id/register_et_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_et_age"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@+id/register_et_name">
        </EditText>

        <EditText
            android:id="@+id/register_et_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_et_height"
            android:inputType="number"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@+id/register_et_age">
        </EditText>

        <EditText
            android:id="@+id/register_et_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_et_weight"
            android:inputType="number"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@+id/register_et_height">
        </EditText>

        <TextView
            android:id="@+id/register_tv_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_tv_gender"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@+id/register_et_weight">
        </TextView>

        <RadioGroup
            android:id="@+id/register_rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_tv_gender"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/register_rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_rb_male"
                android:layout_weight="1">
            </RadioButton>

            <RadioButton
                android:id="@+id/register_rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_rb_female"
                android:layout_weight="1">
            </RadioButton>

        </RadioGroup>

        <TextView
            android:id="@+id/register_tv_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@+id/register_rg_gender"
            android:text="@string/register_tv_goal">
        </TextView>

        <Spinner
            android:id="@+id/register_sp_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@+id/register_tv_goal">
        </Spinner>

        <TextView
            android:id="@+id/register_tv_activity_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@+id/register_sp_goal"
            android:text="@string/register_activity_tv_choose_your_activity_level">
        </TextView>

        <Spinner
            android:id="@+id/register_sp_activity_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@+id/register_tv_activity_level">
        </Spinner>

        <TextView
            android:id="@+id/register_tv_account_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_tv_account_information"
            android:textSize="17dp"
            android:textColor="@color/colorAccent"
            android:layout_below="@id/register_sp_activity_level"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp">
        </TextView>


        <EditText
            android:id="@+id/register_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_et_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@+id/register_tv_account_info">
        </EditText>

        <EditText
            android:id="@+id/register_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_et_password"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@+id/register_et_email">
        </EditText>

        <EditText
            android:id="@+id/register_et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_confirm_password"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@+id/register_et_password">
        </EditText>

        <Button
            android:id="@+id/register_bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/register_et_confirm_password"
            android:layout_centerHorizontal="true"
            android:text="@string/register_bt_save">
        </Button>
    </RelativeLayout>
</ScrollView>

</LinearLayout>