<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/food_list_tv_list_of_aliments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/food_list_tv_title_list_of_aliments"
        android:textSize="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/personalInfoBackground"
        android:weightSum="3">

        <TextView
            android:id="@+id/aliments_list_tv_product"
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/aliments_list_tv_product"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/aliments_list_tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/aliments_list_tv_quantity"
            android:textColor="@color/black">

        </TextView>

        <TextView
            android:id="@+id/aliments_list_tv_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/aliments_list_tv_calories"
            android:textColor="@color/black" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/food_list_lv_list_of_aliments"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
         />

    <Button
        android:id="@+id/food_list_btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/food_list_btn_done" />

</LinearLayout>