<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_personal_info_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/edit_personal_info_et_email">
    </EditText>


    <EditText
        android:id="@+id/edit_personal_info_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/edit_personal_info_et_email"
        android:hint="@string/edit_personal_info_et_name">
    </EditText>

    <EditText
        android:id="@+id/edit_personal_info_et_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/edit_personal_info_et_name"
        android:hint="@string/edit_personal_info_et_height">
    </EditText>

    <EditText
        android:id="@+id/edit_personal_info_et_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/edit_personal_info_et_height"
        android:hint="@string/edit_personal_info_et_weight">
    </EditText>

    <Spinner
        android:id="@+id/edit_personal_info_spn_activity_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/edit_personal_info_et_weight">
    </Spinner>

</RelativeLayout>